--- a/frontend/src/views/seller/sellerBookings/biddingRequests/ownerBiddings.html
+++ b/frontend/src/views/seller/sellerBookings/biddingRequests/ownerBiddings.html
@@ -10,17 +10,12 @@
                         <i class="fa fa-filter"></i> Filter & Sort Biddings
                     </h3>
                 </div>
-                <div class="col-xs-12 col-sm-6 visible-xs visible-sm">
-                    <button class="btn btn-default btn-sm pull-right" data-toggle="collapse" data-target="#filterPanelBiddings" aria-expanded="false">
-                        <i class="glyphicon glyphicon-filter"></i> Toggle Filters
-                        <span class="caret"></span>
-                    </button>
-                </div>
+                
             </div>
         </div>
         
 
-        <div id="filterPanelBiddings" class="panel-body collapse navbar-collapse">
+        <div id="filterPanelBiddings" class="panel-body navbar-collapse">
             <div class="row">
                 <div class="col-md-12">
                     <div class="well well-sm">
@@ -264,11 +259,5 @@
         cursor: pointer;
     }
 
-    /* Only essential CSS kept - no custom mobile styling */
-    @media (min-width: 992px) {
-        #filterPanelBiddings.collapse {
-            display: block !important;
-            height: auto !important;
-        }
-    }
+   
 </style>
