--- a/frontend/src/views/seller/sellerListings/addonsModal/addonsModal.html
+++ b/frontend/src/views/seller/sellerListings/addonsModal/addonsModal.html
@@ -31,7 +31,7 @@
                     </table>
                 </div>
                 <p ng-if="!addons || addons.length === 0" class="text-muted" style="padding: 15px 0; font-style: italic;">
-                    <span class="glyphicon glyphicon-info-sign"></span> No addons added for this car yet.
+                    <span class="glyphicon glyphicon-info-sign"></span> No addons added By you yet.
                 </p>
             </div>
         </uib-tab>
