--- a/frontend/src/views/admin/userManagement/userManagement.html
+++ b/frontend/src/views/admin/userManagement/userManagement.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header text-center">
-                    <h2><i class="glyphicon glyphicon-user"></i> User Management Dashboard</h2>
+                    <h2><i class="glyphicon glyphicon-user"></i> User Management</h2>
                 </div>
             </div>
         </div>
@@ -13,9 +13,8 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="panel panel-default" style="border-radius: 4px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); margin-bottom: 20px;">
-                    <div class="panel-heading" style="background: linear-gradient(to right, hsl(0, 0%, 42%), #5f5e5e); border-bottom: 1px solid #ddd;">
+                    <div class="panel-heading" style="border-bottom: 1px solid #ddd;">
                         <h4 class="panel-title">
-                            <i class="glyphicon glyphicon-filter text-primary"></i> 
                             Filter Users
                         </h4>
                     </div>
