--- a/frontend/src/views/becomeSeller/becomeSeller.html
+++ b/frontend/src/views/becomeSeller/becomeSeller.html
@@ -1,5 +1,5 @@
-
 <div class="container-fluid" ng-app="carApp" ng-init="init()">
+  
   
   <div class="panel panel-default">
     <div class="panel-heading text-center">
@@ -95,7 +95,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Car Name:</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" ng-model="carName" name="carName" placeholder="Enter car name" required ng-minlength="3" ng-maxlength="30">
+                  <input type="text" class="form-control" ng-model="car.name" name="carName" placeholder="Enter car name" required ng-minlength="3" ng-maxlength="30">
                   <div class="text-danger" ng-show="addCarForm.carName.$touched && addCarForm.carName.$invalid">
                     <span ng-show="addCarForm.carName.$error.required">Car name is required.</span>
                     <span ng-show="addCarForm.carName.$error.minlength">Minimum 3 characters.</span>
@@ -107,7 +107,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Company:</label>
                 <div class="col-sm-9">
-                  <select class="form-control" ng-model="company" name="company" required>
+                  <select class="form-control" ng-model="car.company" name="company" required>
                     <option value="" disabled selected>Select Company</option>
                     <option ng-repeat="company in companies" value="{{company}}">{{company}}</option>
                   </select>
@@ -120,7 +120,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Model Year:</label>
                 <div class="col-sm-9">
-                  <input type="number" class="form-control" ng-model="carModel" name="carModel" placeholder="Enter model year" required ng-min="1900" ng-max="{{currentYear}}">
+                  <input type="number" class="form-control" ng-model="car.modelYear" name="carModel" placeholder="Enter model year" required ng-min="1900" ng-max="{{currentYear}}">
                   <div class="text-danger" ng-show="addCarForm.carModel.$touched && addCarForm.carModel.$invalid">
                     <span ng-show="addCarForm.carModel.$error.required">Model year is required.</span>
                     <span ng-show="addCarForm.carModel.$error.min">Minimum year is 1900.</span>
@@ -132,7 +132,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Category:</label>
                 <div class="col-sm-9">
-                  <select class="form-control" ng-model="category" name="category" required>
+                  <select class="form-control" ng-model="car.category" name="category" required>
                     <option value="" disabled selected>Select Category</option>
                     <option ng-repeat="cat in carCategories" value="{{cat.name}}">{{cat.name}}</option>
                   </select>
@@ -145,7 +145,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Fuel Type:</label>
                 <div class="col-sm-9">
-                  <select class="form-control" ng-model="fuelType" name="fuelType" required>
+                  <select class="form-control" ng-model="car.fuelType" name="fuelType" required>
                     <option value="" disabled selected>Select Fuel Type</option>
                     <option ng-repeat="type in fuelTypes" value="{{type}}">{{type}}</option>
                   </select>
@@ -159,7 +159,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Registration Number:</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP 07 DD 4567)" required >
+                  <input type="text" class="form-control" ng-model="car.registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP 07 DD 4567)" required >
                   <small class="help-block">Enter the official registration number as it appears on your vehicle documents (e.g., MP07-DD-4567)</small>
                   <div class="text-danger" ng-show="addCarForm.registrationNumber.$touched && addCarForm.registrationNumber.$invalid">
                     <span ng-show="addCarForm.registrationNumber.$error.required">Registration number is required.</span>
@@ -171,7 +171,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Price Per Day:</label>
                 <div class="col-sm-9">
-                  <input type="number" class="form-control" ng-model="carPrice" name="carPrice" placeholder="{{minPrice}} - {{maxPrice}}" required ng-min="{{minPrice}}" ng-max="{{maxPrice}}">
+                  <input type="number" class="form-control" ng-model="car.price" name="carPrice" placeholder="{{minPrice}} - {{maxPrice}}" required ng-min="{{minPrice}}" ng-max="{{maxPrice}}">
                   <div class="text-danger" ng-show="addCarForm.carPrice.$touched && addCarForm.carPrice.$invalid">
                     <span ng-show="addCarForm.carPrice.$error.required">Price is required.</span>
                     <span ng-show="addCarForm.carPrice.$error.min || addCarForm.carPrice.$error.max">Price must be between {{minPrice}} and {{maxPrice}}.</span>
@@ -182,7 +182,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Mileage (km):</label>
                 <div class="col-sm-9">
-                  <input type="number" class="form-control" ng-model="mileage" name="mileage" required ng-min="5" ng-max="1000" placeholder="Enter mileage">
+                  <input type="number" class="form-control" ng-model="car.mileage" name="mileage" required ng-min="5" ng-max="1000" placeholder="Enter mileage">
                   <div class="text-danger" ng-show="addCarForm.mileage.$touched && addCarForm.mileage.$invalid">
                     <span ng-show="addCarForm.mileage.$error.required">Mileage is required.</span>
                     <span ng-show="addCarForm.mileage.$error.min || addCarForm.mileage.$error.max">Must be between 5 and 1000 km.</span>
@@ -200,11 +200,6 @@
                   <div class="row" ng-if="images.length > 0">
                     <div class="col-xs-6 col-sm-4" ng-repeat="img in images track by $index">
                       <img ng-src="{{ imagePreviews[$index] }}" class="img-thumbnail" style="max-height: 150px;" alt="Preview">
-                      <div>
-                        <small>Dominant Color:</small>
-                        <div class="d-inline-block" style="width: 30px; height: 30px; border: 1px solid #000;" ng-style="{'background-color': color}"></div>
-                        <small class="ml-2">{{ color }}</small>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -213,7 +208,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">City:</label>
                 <div class="col-sm-9">
-                  <select class="form-control" ng-model="city" name="city" required>
+                  <select class="form-control" ng-model="car.city" name="city" required>
                     <option value="" disabled selected>Select City</option>
                     <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
                   </select>
