--- a/frontend/src/views/seller/sellerListings/addCarModal/addCarModal.html
+++ b/frontend/src/views/seller/sellerListings/addCarModal/addCarModal.html
@@ -7,7 +7,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Car Name:</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" ng-model="carName" name="carName" placeholder="Enter car name" required ng-minlength="3" ng-maxlength="30">
+        <input type="text" class="form-control" ng-model="car.name" name="carName" placeholder="Enter car name" required ng-minlength="3" ng-maxlength="30">
         <div class="text-danger" ng-show="addCarModalForm.carName.$touched && addCarModalForm.carName.$invalid">
           <span ng-show="addCarModalForm.carName.$error.required">Car name is required.</span>
           <span ng-show="addCarModalForm.carName.$error.minlength">Minimum 3 characters.</span>
@@ -19,7 +19,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Company:</label>
       <div class="col-sm-9">
-        <select class="form-control" ng-model="company" name="company" required>
+        <select class="form-control" ng-model="car.company" name="company" required>
           <option value="" disabled selected>Select Company</option>
           <option ng-repeat="company in companies" value="{{company}}">{{company}}</option>
         </select>
@@ -32,7 +32,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Model Year:</label>
       <div class="col-sm-9">
-        <input type="number" class="form-control" ng-model="carModel" name="carModel" placeholder="Enter model year" required ng-min="1900" ng-max="{{currentYear}}">
+        <input type="number" class="form-control" ng-model="car.modelYear" name="carModel" placeholder="Enter model year" required ng-min="1900" ng-max="{{currentYear}}">
         <div class="text-danger" ng-show="addCarModalForm.carModel.$touched && addCarModalForm.carModel.$invalid">
           <span ng-show="addCarModalForm.carModel.$error.required">Model year is required.</span>
           <span ng-show="addCarModalForm.carModel.$error.min">Minimum year is 1900.</span>
@@ -44,7 +44,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Category:</label>
       <div class="col-sm-9">
-        <select class="form-control" ng-model="category" name="category" required>
+        <select class="form-control" ng-model="car.category" name="category" required>
           <option value="" disabled selected>Select Category</option>
           <option ng-repeat="cat in carCategories" value="{{cat.name}}">{{cat.name}}</option>
         </select>
@@ -57,7 +57,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Fuel Type:</label>
       <div class="col-sm-9">
-        <select class="form-control" ng-model="fuelType" name="fuelType" required>
+        <select class="form-control" ng-model="car.fuelType" name="fuelType" required>
           <option value="" disabled selected>Select Fuel Type</option>
           <option ng-repeat="type in fuelTypes" value="{{type}}">{{type}}</option>
         </select>
@@ -71,11 +71,10 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Registration Number:</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP O9 KK 9000 )" required ng-pattern="/^[A-Z]{2}[\\- ]?[0-9]{2}[\\- ]?[A-Z]{1,2}[\\- ]?[0-9]{4}$/">
+        <input type="text" class="form-control" ng-model="car.registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP O9 KK 9000 )" required >
         <small class="help-block">Enter the official registration number as it appears on your vehicle documents</small>
         <div class="text-danger" ng-show="addCarModalForm.registrationNumber.$touched && addCarModalForm.registrationNumber.$invalid">
           <span ng-show="addCarModalForm.registrationNumber.$error.required">Registration number is required.</span>
-          <span ng-show="addCarModalForm.registrationNumber.$error.pattern">Please enter a valid registration number format.</span>
         </div>
       </div>
     </div>
@@ -83,7 +82,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Price Per Day:</label>
       <div class="col-sm-9">
-        <input type="number" class="form-control" ng-model="carPrice" name="carPrice" placeholder="{{minPrice}} - {{maxPrice}}" required ng-min="{{minPrice}}" ng-max="{{maxPrice}}">
+        <input type="number" class="form-control" ng-model="car.price" name="carPrice" placeholder="{{minPrice}} - {{maxPrice}}" required ng-min="{{minPrice}}" ng-max="{{maxPrice}}">
         <div class="text-danger" ng-show="addCarModalForm.carPrice.$touched && addCarModalForm.carPrice.$invalid">
           <span ng-show="addCarModalForm.carPrice.$error.required">Price is required.</span>
           <span ng-show="addCarModalForm.carPrice.$error.min || addCarModalForm.carPrice.$error.max">Price must be between {{minPrice}} and {{maxPrice}}.</span>
@@ -94,7 +93,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Mileage (km):</label>
       <div class="col-sm-9">
-        <input type="number" class="form-control" ng-model="mileage" name="mileage" required ng-min="5" ng-max="1000" placeholder="Enter mileage">
+        <input type="number" class="form-control" ng-model="car.mileage" name="mileage" required ng-min="5" ng-max="1000" placeholder="Enter mileage">
         <div class="text-danger" ng-show="addCarModalForm.mileage.$touched && addCarModalForm.mileage.$invalid">
           <span ng-show="addCarModalForm.mileage.$error.required">Mileage is required.</span>
           <span ng-show="addCarModalForm.mileage.$error.min || addCarModalForm.mileage.$error.max">Must be between 5 and 1000 km.</span>
@@ -110,12 +109,13 @@
         <div class="text-danger" ng-if="imageError">{{ imageError }}</div>
 
         <div class="row" ng-if="images.length > 0">
-          <div class="col-xs-6 col-sm-4" ng-repeat="img in images track by $index">
-            <img ng-src="{{ imagePreviews[$index] }}" class="img-thumbnail" style="max-height: 150px;" alt="Preview">
-            <div>
-              <small>Dominant Color:</small>
-              <div class="d-inline-block" style="width: 30px; height: 30px; border: 1px solid #000;" ng-style="{'background-color': color}"></div>
-              <small class="ml-2">{{ color }}</small>
+          <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="img in images track by $index">
+            <div class="thumbnail">
+              <div class="embed-responsive embed-responsive-4by3">
+                <img ng-src="{{ imagePreviews[$index] }}" class="embed-responsive-item" alt="Preview">
+              </div>
+              <div class="caption text-center">
+              </div>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">City:</label>
       <div class="col-sm-9">
-        <select class="form-control" ng-model="city" name="city" required>
+        <select class="form-control" ng-model="car.city" name="city" required>
           <option value="" disabled selected>Select City</option>
           <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
         </select>
